More documentation added
For that 20% of documentation... It was 19.6%...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: easy_box
 description: All in one widget, with all the most basic widget properties. Composing a tree of widgets depending on the properties that you request. Just organize everything with the Box.
-version: 0.1.0
+version: 0.1.0+1
 homepage: https://github.com/DrafaKiller/EasyBox-flutter
 
 environment:
